--- a/platformio.ini
+++ b/platformio.ini
@@ -4,7 +4,8 @@
 default_envs = WEMOS_D1
 
 [common]
-build_flags =   -D CORE_DEBUG_LEVEL=0
+build_flags =   -D VERSION='"1.0.1"'
+                -D CORE_DEBUG_LEVEL=0
                 # some compiler options to get rid of not really critical messages while compiling
                 -Wno-unused-variable
                 -Wno-format-extra-args
@@ -22,32 +23,34 @@ lib_deps =      U8G2
                 https://github.com/adafruit/Adafruit_NeoPixel.git
 
 [env:WEMOS_D1]
-platform            = espressif8266
-framework           = arduino
-board               = d1_mini       # Important because of the different pin-out
-board_build.mcu     = esp8266
-board_build.f_cpu   = 80000000L
-board_build.filesystem = littlefs
-board_build.ldscript = eagle.flash.4m2m.ld
-extra_scripts       = ./littlefsbuilder.py
-lib_deps            = ${common.lib_deps}
-                      https://github.com/plerup/espsoftwareserial.git
-build_flags         = ${common.build_flags}
-upload_protocol     = esptool
-monitor_speed       = 115200
+platform                = espressif8266
+framework               = arduino
+board                   = d1_mini       # Important because of the different pin-out
+board_build.mcu         = esp8266
+board_build.f_cpu       = 80000000L
+board_build.filesystem  = littlefs
+board_build.ldscript    = eagle.flash.4m2m.ld
+extra_scripts           = copy_binaries.py
+                          littlefsbuilder.py
+lib_deps                = ${common.lib_deps}
+                          https://github.com/plerup/espsoftwareserial.git
+build_flags             = ${common.build_flags}
+upload_protocol         = esptool
+monitor_speed           = 115200
 
 [ESP32_Base]
-framework           = arduino
-platform            = espressif32
-board_build.f_cpu   = 240000000L
-board_build.filesystem = littlefs
-board_build.partitions = custompart.csv
-extra_scripts       = ./littlefsbuilder.py
-lib_deps            = ${common.lib_deps}
-build_flags         = ${common.build_flags}
-upload_protocol     = esptool
-monitor_speed       = 115200
-monitor_filters     = esp32_exception_decoder
+framework               = arduino
+platform                = espressif32
+board_build.f_cpu       = 240000000L
+board_build.filesystem  = littlefs
+board_build.partitions  = custompart.csv
+extra_scripts           = copy_binaries.py
+                          littlefsbuilder.py
+lib_deps                = ${common.lib_deps}
+build_flags             = ${common.build_flags}
+upload_protocol         = esptool
+monitor_speed           = 115200
+monitor_filters         = esp32_exception_decoder
 
 #
 # Wemos mini with ESP32
